Use new shared version and update router interface